# skvaider

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE.txt  README.md  alembic.ini  config-inference-1.toml  config-inference-2.toml  config-inference.toml  config.toml  dataset.txt  default.nix  devenv.nix  devenv.yaml  embeddings-reference.json  flake.nix  models.toml  pyproject.toml  pytest.ini  result  test-request-streaming.sh  test-request.sh  test_endpoints.py  test_openai_client.py
.github/workflows/: pre-commit.yaml  test.yaml
devhost/: batou  requirements.txt
devhost/components/skvaider_gateway/: component.py  skvaider-gateway.nix
devhost/components/skvaider_inference/: component.py  skvaider-inference.nix
devhost/components/skvaider_settings/: component.py  skvaider-source.nix
devhost/environments/dev/: environment.cfg  provision.sh
doc/: DISCONNECT_CHAIN.md
doc/stability-comparison/: 00-W7900-ollama_rocm-BF16.json  01-M4-cpu-F32.json  02-M4-cpu-Q4_0.json  04-M4-metal-Q4_0.json  05-M2-metal_dense-F32.json  06-W7900-rocm-F32.json  10-W7900-rocm_dense-BF16.json  3-m4-metal-F32.json  7-W7900-rocm-Q4_0.json  README.md  compare.py
migrations/: 0001_init.sql
nix/: config-gateway-test.toml  config-inference-test.toml
scripts/: cli_test_parallel.py  test_disconnect_chain.py  test_tool_call.py
src/aramaki/: __init__.py  collection.py  db.py  manager.py  typing.py  utils.py
src/aramaki/alembic/: env.py
src/aramaki/tests/: test_collection.py  test_db.py  test_manager.py
src/chimera/: __init__.py
src/inference/: main.py  manager.py  state.py
src/inference/routers/: models.py
src/inference/tests/: test_main.py  test_manager.py
src/skvaider/: __init__.py  auth.py  check.py  cli.py  collection_replicator.py  config.py  conftest.py  db.py  debug.py  generate_embedding_reference.py  logging.py  manifest.py  metrics.py  models.py  replay.py  test_debug.py  typing.py  utils.py
src/skvaider/aramaki/: __init__.py  collection_replication.py  db.py  models.py
src/skvaider/dummy_engine/: __init__.py
src/skvaider/inference/: __init__.py  config.py  conftest.py  main.py  manager.py  metrics.py  model.py  resources.py  state.py
src/skvaider/proxy/: backends.py  models.py  placement.py  pool.py
src/skvaider/routers/: admin.py  metrics.py  openai.py
src/skvaider/tests/: test_access_restrictions.py  test_auth.py  test_config.py  test_db.py  test_debug.py  test_endpoints.py  test_metrics.py  test_model_management.py  test_openai_client.py  (+4 more)
(+21 files in other folders)
